# TauriIntercomDesktopApp

./: package-lock.json  package.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/oath/: error.rs  lib.rs  manager.rs  mod.rs  models.rs
src/components/: OAuthFlow.tsx  OAuthManager.tsx  OAuthSetup.tsx
src/hooks/: useOAuth.ts
src/services/: oauthService.ts
src/types/: oauth.ts
