[package]
authors = ["you"]
description = "Desktop Intercom Agent"
edition = "2021"
name = "desktopapp"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
crate-type = ["staticlib", "cdylib", "rlib"]
name = "desktopapp_lib"

[build-dependencies]
tauri-build = {version = "2", features = [] }

[dependencies]
base64 = "0.21"
log = "0.4"
open = "5.0"
rand = "0.8"
reqwest = {version = "0.11", features = ["json"] }
serde = {version = "1", features = ["derive"] }
serde_json = "1"
tauri = {version = "2", features = [] }
tauri-plugin-opener = "2"
thiserror = "1.0"
tokio = {version = "1.0", features = ["full"] }
warp = "0.3"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
